--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,16 +4,65 @@ body{
 }
 header,footer{
     text-align: center;
-    width: 400px;
+    width: 300px;
     margin: 30px auto 0px auto;
 }
 main{
-    width: 400px;
+    width: 300px;
     margin: 30px auto 0px auto;
 }
+form{
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+    font-size: 18px;
+}
+label{
+    display: block;
+    margin-bottom: 10px;
+}
 input{
+    display: inline;
     font-family: 'Poppins', sans-serif;
+    width: 236px;
+    border: 1px solid #ced4da;
+    padding: 10px;
+    border-radius: 0px 10px 10px 10px;
+    font-weight: 200;
+    font-size: 18px;
+}
+input[type = "sumbit"]{
+    background-color: #fd0c49;
+    color: #fff;
+    font-weight: 400;
+    border: radius 5px;
+    width: 100%;
 }
 select{
     font-family: 'Poppins', sans-serif;
+    width: 100%;
+    border: 1px solid #ced4da;
+    border-radius: 5px;
+    font-weight: 200;
+    font-size: 18px;
+}
+
+footer{
+    text-align: center;
+    font-weight: 100;
+}
+
+/* IDs */
+
+#nicka{
+    float: left;
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+    width: 20px;
+    background-color: #ced4da;
+    border: 1px solid #ced4da;
+    padding: 10px;
+    border-radius: 5px 0px 0px 5px;
+    font-weight: 400;
+    font-size: 18px;
 }
