--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,15 +1,15 @@
 body{
     background-color: #f5f5f5;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins',sans-serif;
 }
 header,footer{
     text-align: center;
-    width: 300px;
     margin: 30px auto 0px auto;
+    width: 300px;
 }
 main{
-    width: 300px;
     margin: 30px auto 0px auto;
+    width: 300px;
 }
 form{
     display: flex;
@@ -23,37 +23,41 @@ label{
 }
 input{
     display: inline;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins',sans-serif;
     width: 236px;
     border: 1px solid #ced4da;
     padding: 10px;
-    border-radius: 0px 10px 10px 10px;
+    border-radius: 0px 5px 5px 0px;
     font-weight: 200;
-    font-size: 18px;
+    font-size:18px;
+
 }
-input[type = "sumbit"]{
+input[type="email"]{
+    border: 1px solid #ced4da;
+    font-weight: 200;
+    font-size:18px;
+    border-radius: 5px;
+    width: 278px;
+}
+input[type="submit"]{
     background-color: #fd0c49;
     color: #fff;
     font-weight: 400;
-    border: radius 5px;
+    border-radius: 5px;
     width: 100%;
 }
 select{
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins',sans-serif;
     width: 100%;
     border: 1px solid #ced4da;
     border-radius: 5px;
     font-weight: 200;
-    font-size: 18px;
+    font-size:18px;
 }
-
 footer{
-    text-align: center;
     font-weight: 100;
 }
-
-/* IDs */
-
+/*IDs*/
 #nicka{
     float: left;
     font-family: 'Poppins', sans-serif;
@@ -65,4 +69,13 @@ footer{
     border-radius: 5px 0px 0px 5px;
     font-weight: 400;
     font-size: 18px;
+}
+#error{
+    text-align: center;
+    color: #fd0c49;
+    font-weight: 200;
+    font-size: 14px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+
 }
